fix overflow

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,7 @@
+
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden !important;
 }
 
 body {
@@ -9,7 +11,7 @@ body {
     padding: 0;
     text-align: center;
     font-family: sans-serif;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 .container {
